--- a/index.html
+++ b/index.html
@@ -10,7 +10,161 @@
 </head>
 
 <body>
-  <div class="wrapper"></div>
+  <div class="wrapper">
+
+    <header>
+      <img src="assets/logo.png" alt="">
+      <nav>
+        <ul>
+          <li><a href="">ABOUT ME</a></li>
+          <li><a href="">MY TECHNOLOGIES</a></li>
+          <li><a href="">MY PROJECTS</a></li>
+          <li><a href="">CONTACTS</a></li>
+          `
+        </ul>
+      </nav>
+    </header>
+
+    <div class="about-me">
+      <h1>Hello, I'm Komron <br>frontend developer</h1>
+
+      <div class="about-me-paras">
+        <p>I've worked on various web projects, focusing on responsive <br>designs and cross-browser compatibility.
+          I'm proficient in React,<br> Angular, and Git.</p>
+        <p>I'm seeking opportunities to grow my skills and contribute to <br> innovative projects. If you need a
+          frontend developer who values <br> user experience, let's connect!</p>
+      </div>
+    </div>
+
+
+
+    <div class="my-technologies">
+      
+      <h1>MY TECHNOLOGIES</h1>
+      <div class="web-elem">
+        <img src="assets/html.svg" alt="">
+        <h2>HTML</h2>
+        <ul>
+          <li>ELEMENTS</li>
+          <li>ATTRIBUTES</li>
+          <li>FONTS</li>
+          <li>CANVAS</li>
+          <li>SEMANTIC TAGS</li>
+          <li>ACCESSIBILITY</li>
+
+        </ul>
+      </div>
+
+      <div class="web-elem">
+        <img src="assets/css.svg" alt="">
+        <h2>CSS</h2>
+        <ul>
+          <li>SELECTORS</li>
+          <li>COLORS</li>
+          <li>BOX MODEL</li>
+          <li>FLEX</li>
+          <li>GRID</li>
+          <li>PSEUDO-CLASSES</li>
+          <li>PSEUDO-ELEMENTS</li>
+
+        </ul>
+      </div>
+
+
+      <div class="web-elem">
+        <img src="assets/js.svg" alt="">
+        <h2>JAVASCRIPT</h2>
+        <ul>
+          <li>VARIABLES</li>
+          <li>OPERATORS</li>
+          <li>DATATYPES</li>
+          <li>OBJECTS</li>
+          <li>ARRAY</li>
+          <li>FUNCTIONS</li>
+          <li>DATE</li>
+          <li>COMPARISON AND LOGICAL OPERATORS</li>
+          <li>EVENTS</li>
+
+        </ul>
+      </div>
+
+    </div>
+
+
+    <div class="my-projects">
+
+      <h1>MY PROJECTS</h1>
+      <div class="card">
+        <img src="assets/card1.jpg" alt="">
+        <p>This Angular app is designed for task management, providing users with a <br> simple and intuitive interface
+          to organize their tasks. The app is built with <br> responsive design principles, ensuring that it looks and
+          works well on different screen sizes.</p>
+
+
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>JAVASCRIPT</div>
+        <div>ANGULAR</div>
+
+        <p>REPOSITORIES:<a href="">GITHUB</a></p>
+      </div>
+
+      <div class="card">
+        <img src="assets/card2.jpg" alt="">
+        <p>This project is a React-based website that serves as a showcase for my <br> frontend development skills. It
+          features a clean and modern design, with a <br> focus on user experience and interactivity.</p>
+
+
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>JAVASCRIPT</div>
+        <div>VUE.JS</div>
+
+        <p>REPOSITORIES:<a href="">GITHUB</a></p>
+      </div>
+
+
+      <div class="card">
+        <img src="assets/card2.jpg" alt="">
+        <p>A React-based website showcasing my frontend skills.</p>
+
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>JAVASCRIPT</div>
+        <div>REACT</div>
+
+        <p>REPOSITORIES:<a href="">GITHUB</a></p>
+      </div>
+
+
+
+    </div>
+
+    <div class="contacts">
+      <h1>LET'S WORK TOGETHER</h1>
+
+
+      <form action="">
+        <input type="text" placeholder="Name">
+        <input type="text" placeholder="Surname">
+        <input type="text" placeholder="Comment">
+
+        <button type="submit">SUBMIT</button>
+
+
+      </form>
+
+      <div>
+        <h1>SOCIAL NETWORSKS</h1>
+        <img src="assets/linkedin.png" alt="">
+        <img src="assets/insta.png" alt="">
+        <img src="assets/facebook.png" alt="">
+      </div>
+
+    </div>
+
+
+  </div>
   <script>
     const menuToggle = document.querySelector(".menu-toggle");
     const nav = document.querySelector(".nav");
